08/11 F Fixed if MySQL returns error 1226, we exit out.           [ #00]
08/07 F Fixed handling of uptime reporting from Sentinel services [ #00]
08/06 F Fixed EXCLUDE ADD not checking the nick lenghts.          [ #00]
08/05 F Fixed maxvalues setting on clean installs.                [#122]

Provided by Hal9000 <hal9000@pimpmylinux.org>
12/07 A ADMIN ADD|DEL|SETPASS for config file admins only         [ #00]
12/06 A Added ADMIN LIST|SHOW|SETPASS commands                    [ #00]
12/06 A Added support for admin users stored into SQL             [ #00]
12/04 F Cleaned up user/chan modes in unreal32 module and sql     [ #00]
12/03 F Fixed topic not being set on P10 ircds                    [ #00]
12/03 F Fixed user/chan modes in P10 protocol modules and sql     [ #00]
12/03 A Reorganized, cleaned up and fixed sql files               [ #00]
11/30 F More fixes to the Charybdis SQL database file             [ #00]
11/30 F Fixed ustats table for Charybdis and Beware               [ #00]
11/29 F Fixed not decreasing user count on server kills           [#350]
11/26 F Fixed user modes not being reset on user reconnect        [#359]
11/23 F Fixed FMODE parser in InspIRCd 1.1 protocol module        [ #00]
11/22 F Fixed uplink server not being set with InspIRCd 1.0/1.1   [#357]
11/22 F Fixed maxvalues table not getting updated in some cases   [#356]
11/22 A Added InspIRCd 1.1 support                                [#353]
11/14 F Help now advertises the CHANSTATS EXCLUDE LIST command    [ #00]
11/11 F Don't care about Unreal's +H mode for oper counting       [#338]
09/22 A Added configuration option to disable nick tracking       [ #00]
09/16 U Updated mydbgen                                           [#341]
09/11 F Fixed do_nick not assigning uid correctly                 [ #00]
09/11 F Fixed wrong parameter sent in m_privmsg                   [#335]
09/10 A Added CHANSTATS RENAME command for renaming stats users   [ #00]