@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="2"
 VERSION_PATCH="0"
 VERSION_EXTRA="-RC4"
-VERSION_BUILD="8"
+VERSION_BUILD="9"
 
 # $Log$
+#
+# BUILD : 1.2.0 (9)
+# BUGS  : 365
+# NOTES : SWHOIS is now being reset on reconnect. Fixed channel sometimes not being lowercased correctly on sql creation.
 #
 # BUILD : 1.2.0 (8)
 # BUGS  : N/A
