@@ -269,6 +269,7 @@ Provided by Nomad Dev. <dev@nomadirc.net> - 2005
 08/05 F Fixed maxvalues setting on clean installs.                [#122]
 
 Provided by Hal9000 <hal9000@pimpmylinux.org>
+12/15 F SWHOIS is now being reset on reconnect                    [#365]
 12/07 A ADMIN ADD|DEL|SETPASS for config file admins only         [ #00]
 12/06 A Added ADMIN LIST|SHOW|SETPASS commands                    [ #00]
 12/06 A Added support for admin users stored into SQL             [ #00]
